<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.firstscreen.onBoarding.OnBoardingFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@string/_name_app_on_boarding"
                    android:textColor="@color/backblue"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@string/_fit_app_on_boarding"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/_desc_on_boarding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/reg_final" />
        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>